--- a/oneflow/python/model/maskrcnn/mask_rcnn_R_50_FPN_1x.yaml
+++ b/oneflow/python/model/maskrcnn/mask_rcnn_R_50_FPN_1x.yaml
@@ -1,22 +1,6 @@
 TRAINING: True
-NUM_GPUS: 1
-DECODER:
-  DATA_DIR_TRAIN: /dataset/mask_rcnn/sample_2_val
-  DATA_DIR_TEST: /dataset/mask_rcnn/sample_2_val
-  IMAGE_STATIC_SIZE_TRAIN: [1344, 800]
-  RESIZE_TARGET_SIZE_TRAIN: 800
-  RESIZE_MAX_SIZE_TRAIN: 1333
-  IMAGE_STATIC_SIZE_TEST: [1344, 800]
-  RESIZE_TARGET_SIZE_TEST: 800
-  RESIZE_MAX_SIZE_TEST: 1333
-  PREPROCESS_NORMAL_MEAN: [102.9801, 115.9465, 122.7717]
-  PREPROCESS_NORMAL_STD: [1.0, 1.0, 1.0]
-  MAX_NUM_OF_GT_BBOXES_PER_IMAGE: 256
-  MAX_SEGM_BYTES_SIZE_PER_IMAGE: 1048576
-  FPN_LAYERS: 5
-  FEATURE_MAP_STRIDE: 4
-  ANCHOR_SCALES: 32
-  ASPECT_RATIOS: [0.5, 1.0, 2.0]
+ENV:
+  NUM_GPUS: 1
 BACKBONE:
   CONV_BODY: R-50-FPN
   FREEZE_CONV_BODY_AT: 2
@@ -59,21 +43,3 @@ MASK_HEAD:
   POOLED_W: 14
   SAMPLING_RATIO: 2
   SPATIAL_SCALE: 0.25
-TRAINING_CONF:
-  IMG_PER_GPU: 2
-  BATCH_SIZE: 2
-  TOTAL_BATCH_NUM: 10
-  PRIMARY_LR: 0.01
-  SECONDARY_LR: 0.02
-  WEIGHT_L2: 0.0001
-  BIAS_L2: 0.0
-  LR_DECAY_BOUNDARIES: [120000, 160000]
-  LR_DECAY_VALUES: [0.01, 0.001, 0.0001]
-  # LR_DECAY_VALUES: [1.0, 0.1, 0.01]
-  MOMENTUM_BETA: 0.9
-INFERENCE:
-  PROPOSAL_RANDOM_SAMPLE: True
-MODEL:
-  MODEL_LOAD_PATH: "/model_zoo/mask_rcnn_R_50_FPN_with_momentum/"
-  MODEL_LOAD_SNAPSHOT_PATH: "/model_zoo/mask_rcnn_R_50_FPN_with_momentum/"
-  MODEL_SAVE_SNAPSHOT_PATH: "./log/snapshot"
