--- a/oneflow/python/model/maskrcnn/b21c.yaml
+++ b/oneflow/python/model/maskrcnn/b21c.yaml
@@ -1,7 +1,7 @@
 ENV:
   NUM_GPUS: 1
 DATASETS:
-  ANNOTATION_TRAIN: "annotations/sample_100_instances_val2017.json"
+  ANNOTATION_TRAIN: "annotations/instances_val2017.json"
   IMAGE_DIR_TRAIN: "val2017"
   SHUFFLE: False
 INPUT:
@@ -12,11 +12,10 @@ MODEL:
     RANDOM_SAMPLE: False
   ROI_HEADS:
     RANDOM_SAMPLE: False
-  RESNETS:
-    STRIDE_IN_1X1: False
 SOLVER:
   IMS_PER_BATCH: 2
   MAX_ITER: 10
   BASE_LR: 0.0002
   ENABLE_LR_DECAY: False
   ENABLE_WARMUP: False
+  METRICS_PERIOD: 10
