compare inited model and trained model
Former-commit-id: 5983115873b0e86decd55aca2dbf01e58b82456e

--- a/oneflow/python/model/maskrcnn/b21c_init.yaml
+++ b/oneflow/python/model/maskrcnn/b21c_init.yaml
@@ -16,6 +16,6 @@ SOLVER:
   IMS_PER_BATCH: 2
   MAX_ITER: 10
   BASE_LR: 0.0025
-  ENABLE_LR_DECAY: False
-  ENABLE_WARMUP: False
+  STEPS: (480000, 640000)
+  LR_DECAY_VALUES: (0.0025, 0.00025, 0.000025)
   METRICS_PERIOD: 10
