--- a/oneflow/python/model/maskrcnn/b21c.yaml
+++ b/oneflow/python/model/maskrcnn/b21c.yaml
@@ -7,15 +7,15 @@ DATASETS:
 INPUT:
   MIRROR_PROB: 0.0
 MODEL:
-  WEIGHT: "/model_zoo/detection/mask_rcnn_R_50_FPN_1x_with_momentum"
+  WEIGHT: "/model_zoo/detection/mask_rcnn_R_50_FPN_8x_with_momentum"
   RPN:
     RANDOM_SAMPLE: False
   ROI_HEADS:
     RANDOM_SAMPLE: False
 SOLVER:
   IMS_PER_BATCH: 2
-  MAX_ITER: 10
-  BASE_LR: 0.0002
-  ENABLE_LR_DECAY: False
-  ENABLE_WARMUP: False
+  MAX_ITER: 90009
+  BASE_LR: 0.02
+  STEPS: (60000, 80000)
+  LR_DECAY_VALUES: (0.02, 0.002, 0.0002)
   METRICS_PERIOD: 10
