--- a/dockerimage.yml
+++ b/dockerimage.yml
@@ -1,9 +1,13 @@
 name: Docker Image CI
 
 on:
+    push:
+      branches:
+        - dev_python
     pull_request:
       branches:
         - dev_python
+
 jobs:
 
   build:
