--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,9 +19,7 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
-        git config --get-all
-        echo "$(git config --local --get http.https://github.com/.extraheader)"
-        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        auth_header="AUTHORIZATION: basic ${GITHUB_TOKEN}"
         git submodule sync --recursive
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - name: Build the Docker image
