--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
+        echo "${GITHUB_TOKEN}"
         auth_header="AUTHORIZATION: basic ${GITHUB_TOKEN}"
         git submodule sync --recursive
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
