--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
-        echo "${GITHUB_TOKEN}"
-        auth_header="AUTHORIZATION: basic ${GITHUB_TOKEN}"
+        echo "${{ secrets.GITHUB_TOKEN }}"
+        auth_header="authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
         git submodule sync --recursive
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - name: Build the Docker image
