--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -24,4 +24,5 @@ jobs:
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule foreach --recursive git fetch
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --recursive
     - name: Build the Docker image
-      run: bash docker/build/build.sh
+      run: docker build --build-arg http_proxy=192.168.1.11:8118 --build-arg https_proxy=192.168.1.11:8118 --rm -t oneflow-build -f docker/build/Dockerfile .
+
