--- a/docker/test/Dockerfile
+++ b/docker/test/Dockerfile
@@ -9,8 +9,9 @@
 FROM ubuntu:18.04
 ENV LANG C.UTF-8
 
-RUN apt update && apt install ca-certificates
+RUN apt update && apt-get install -y --no-install-recommends ca-certificates
 COPY docker/test/sources.list /etc/apt/sources.list
+
 RUN APT_INSTALL="apt-get install -y --no-install-recommends" && \
     PIP_INSTALL="python -m pip --no-cache-dir install --upgrade -i https://pypi.tuna.tsinghua.edu.cn/simple" && \
     GIT_CLONE="git clone --depth 10" && \
