fix torch install
Former-commit-id: 4168ded2e3d634e74b7288c31330d22cd6556dd5

--- a/docker/test/Dockerfile
+++ b/docker/test/Dockerfile
@@ -91,8 +91,7 @@ RUN APT_INSTALL="apt-get install -y --no-install-recommends" && \
         typing \
         && \
     $PIP_INSTALL \
-        --pre torch torchvision -f \
-        https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html \
+        torch torchvision \
         && \
 
 # ==================================================================
