--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,4 @@ jobs:
         docker run --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl $PWD"
     - name: Build Test Docker image
       run: |
-        docker run --rm -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo -v $PWD:$PWD bash $PWD/docker/test/test.sh $PWD
-
+        docker run --rm -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash $PWD/docker/test/test.sh $PWD
