config to print total_pos_inds_elem_cnt
Former-commit-id: ab591c3624672d5f3a9718a5ff23df60a938fe65

--- a/oneflow/python/model/maskrcnn/mrcn_1x_train.d2.yaml
+++ b/oneflow/python/model/maskrcnn/mrcn_1x_train.d2.yaml
@@ -3,7 +3,7 @@ ENV:
 DATASETS:
   ANNOTATION_TRAIN: "annotations/instances_train2017.json"
   IMAGE_DIR_TRAIN: "train2017"
-  SHUFFLE: False
+  SHUFFLE: True
 INPUT:
   MIRROR_PROB: 0.5
 MODEL:
@@ -13,6 +13,8 @@ MODEL:
     ZERO_CTRL: True
   ROI_HEADS:
     RANDOM_SAMPLE: True
+  ROI_BOX_HEAD:
+    RETURN_TOTAL_POS_INDS_ELEM_CNT: True
   ROI_MASK_HEAD:
     ZERO_CTRL: True
 SOLVER:
