4 gpu fake image and fix instance num
Former-commit-id: 7aea83cd7a51fbe01febac584ddb6891017a1407

--- a/oneflow/python/model/maskrcnn/mrcn_1x_train_init.test.yaml
+++ b/oneflow/python/model/maskrcnn/mrcn_1x_train_init.test.yaml
@@ -1,8 +1,8 @@
 ENV:
   NUM_GPUS: 1
 DATASETS:
-  ANNOTATION_TRAIN: "annotations/instances_val2017.json"
-  IMAGE_DIR_TRAIN: "val2017"
+  ANNOTATION_TRAIN: "annotations/instances_train2017.json"
+  IMAGE_DIR_TRAIN: "train2017"
   SHUFFLE: False
 INPUT:
   MIRROR_PROB: 0.0
@@ -14,8 +14,9 @@ MODEL:
     RANDOM_SAMPLE: False
 SOLVER:
   IMS_PER_BATCH: 2
-  MAX_ITER: 100
+  MAX_ITER: 10
   BASE_LR: 0.0025
   STEPS: (480000, 640000)
   LR_DECAY_VALUES: (0.0025, 0.00025, 0.000025)
-  METRICS_PERIOD: 10
+  CHECKPOINT_PERIOD: 1
+  METRICS_PERIOD: 100
