--- a/oneflow/python/model/maskrcnn/mrcn_1x_train.test.yaml
+++ b/oneflow/python/model/maskrcnn/mrcn_1x_train.test.yaml
@@ -1,8 +1,8 @@
 ENV:
   NUM_GPUS: 1
 DATASETS:
-  ANNOTATION_TRAIN: "annotations/instances_val2017.json"
-  IMAGE_DIR_TRAIN: "val2017"
+  ANNOTATION_TRAIN: "annotations/instances_train2017.json"
+  IMAGE_DIR_TRAIN: "train2017"
   SHUFFLE: False
 INPUT:
   MIRROR_PROB: 0.0
@@ -17,5 +17,5 @@ SOLVER:
   MAX_ITER: 90009
   BASE_LR: 0.02
   STEPS: (60000, 80000)
-  LR_DECAY_VALUES: (0.02, 0.002, 0.0002)
-  METRICS_PERIOD: 10
+  CHECKPOINT_PERIOD: 1
+  METRICS_PERIOD: 100
