--- a/oneflow/python/model/maskrcnn/mrcn_1x_train_init.test.yaml
+++ b/oneflow/python/model/maskrcnn/mrcn_1x_train_init.test.yaml
@@ -17,6 +17,8 @@ SOLVER:
   MAX_ITER: 10
   BASE_LR: 0.0025
   STEPS: (480000, 640000)
-  LR_DECAY_VALUES: (0.0025, 0.00025, 0.000025)
+  LR_DECAY_VALUES: (1, 0.1, 0.01)
   CHECKPOINT_PERIOD: 1
   METRICS_PERIOD: 100
+  # ENABLE_WARMUP: False
+  # OPTIMIZER: "sgd"
