Dev object detection merge dev python (#2579)
* vpu

* refactor POD_PROTO

* Support Gelu half (#2543)

* Support Gelu half

* Remove gelu half kernel of old complicated version

* Refactor the impl of gelu float/half kernel

* Dev cc comm net empty (#2554)

* copy_comm_net pass when regst dynamic data is empty

* refine name and remove useless back insert in blob; and unittest scripts

* more strict check shape and add log

* Regster::GetSoleBlob()

* rm cclog (#2561)

* Merge broadcast logical ops (#2562)

* add broadcast logical binary op

* add broadcast_logical_kernel.cpp

* add broadcast op conf

* ndarray patch

* add test

* zero_only_zip

* fix format (#2569)

* flag_msg

* remove unrelated files

* Dev python sparse cross entropy (#2572)

* checkout nn_ops.py from dev_sparse_cross_entropy

* rm old sigmoid cross entropy with logits

* add test_sparse_softmax_cross_entropy.py

* UnsortedSegmentSumKernelUtil (#2568)

* unsorted_segment_sum_kernel_util

* unsorted_segment_sum test_case

* unsorted_segment_sum_kernel_util

* UnsortedSegmentSumKernel use UnsortedSegmentSumKernelUtil

* gather_ms0_grad_kernel

* gather data_type_seq

* piecewise scaling learning rate decay (#2573)

* list_head

* StructField

* list_head

* fix rsqrt op, rm rsqrt epsilon (#2577)

* fix rsqrt op, rm epsilon

* fix

* test case

* rm empty

* refactor flat_msg

* add constant like op, sqrt_grad, square_grad (#2578)

* constant like op

* sqrt grad

* square grad

* fix

* fix

* add test case

* format

* domain specific struct in c++

Co-authored-by: Li Xinqi <lixinqi2010@gmail.com>
Co-authored-by: Niu Chong <niuchong893184@gmail.com>
Co-authored-by: cheng cheng <472491134@qq.com>
Co-authored-by: ShawnXuan <xiexuanx2@gmail.com>
Co-authored-by: Juncheng <liujuncheng1022@gmail.com>
Co-authored-by: guo ran <360112263@qq.com>

Former-commit-id: b8b612bd502b82e4f85e9bcd9219fbf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ option(THIRD_PARTY "Build third party or oneflow" OFF)
 option(USE_CLANG_FORMAT "" OFF)
 option(BUILD_RDMA "" OFF)
 option(BUILD_CUDA "" ON)
+option(BUILD_TESTING "" ON)
 option(RELEASE_VERSION "" ON)
 option(PY3 "" OFF)
 option(WITH_XLA "Option to build with XLA" OFF)
