--- a/oneflow/python/model/maskrcnn/mask_rcnn_R_50_FPN_1x_eval.yaml
+++ b/oneflow/python/model/maskrcnn/mask_rcnn_R_50_FPN_1x_eval.yaml
@@ -1,48 +1,41 @@
-TRAINING: False
 DECODER:
   FPN_LAYERS: 5
   FEATURE_MAP_STRIDE: 4
   ANCHOR_SCALES: 32
   ASPECT_RATIOS: [0.5, 1.0, 2.0]
-BACKBONE:
-  CONV_BODY: R-50-FPN
-  FREEZE_CONV_BODY_AT: 2
-  RESNET_STEM_OUT_CHANNELS: 64
-RPN:
-  FOREGROUND_FRACTION: 0.5
-  RANDOM_SUBSAMPLE: False
-  POSITIVE_OVERLAP_THRESHOLD: 0.7
-  NEGATIVE_OVERLAP_THRESHOLD: 0.3
-  SUBSAMPLE_NUM_PER_IMG: 256
-  WEIGHT_H: 1.0
-  WEIGHT_W: 1.0
-  WEIGHT_X: 1.0
-  WEIGHT_Y: 1.0
-  TOP_N_PER_FM_TRAIN: 1000
-  NMS_TOP_N_TRAIN: 1000
-  TOP_N_PER_IMG_TRAIN: 1000
-  TOP_N_PER_FM_TEST: 1000
-  NMS_TOP_N_TEST: 1000
-  TOP_N_PER_IMG_TEST: 1000
-  NMS_THRESH: 0.7
-BOX_HEAD:
-  FOREGROUND_THRESHOLD: 0.5
-  BACKGROUND_THRESHOLD_LOW: 0.0
-  BACKGROUND_THRESHOLD_HIGH: 0.5
-  FOREGROUND_FRACTION: 0.25
-  WEIGHT_X: 10.0
-  WEIGHT_Y: 10.0
-  WEIGHT_H: 5.0
-  WEIGHT_W: 5.0
-  RANDOM_SUBSAMPLE: False
-  NUM_CLASSES: 81
-  NUM_SAMPLED_ROI_PER_IMG: 512
-  POOLED_H: 7
-  POOLED_W: 7
-  SPATIAL_SCALE: 0.25
-  SAMPLING_RATIO: 2
-MASK_HEAD:
-  POOLED_H: 14
-  POOLED_W: 14
-  SAMPLING_RATIO: 2
-  SPATIAL_SCALE: 0.25
+MODEL:
+  BACKBONE:
+    CONV_BODY: R-50-FPN
+    FREEZE_CONV_BODY_AT: 2
+  RPN:
+    POSITIVE_FRACTION: 0.5
+    RANDOM_SAMPLE: False
+    FG_IOU_THRESHOLD: 0.7
+    BG_IOU_THRESHOLD: 0.3
+    BATCH_SIZE_PER_IMAGE: 256
+    PRE_NMS_TOP_N_TRAIN: 1000
+    POST_NMS_TOP_N_TRAIN: 1000
+    FPN_POST_NMS_TOP_N_TRAIN: 1000
+    PRE_NMS_TOP_N_TEST: 1000
+    POST_NMS_TOP_N_TEST: 1000
+    FPN_POST_NMS_TOP_N_TEST: 1000
+    NMS_THRESH: 0.7
+  ROI_HEADS:
+    FG_IOU_THRESHOLD: 0.5
+    BG_IOU_THRESHOLD: 0.5
+    BBOX_REG_WEIGHTS: (10.0, 10.0, 5.0, 5.0)
+    POSITIVE_FRACTION: 0.25
+    RANDOM_SAMPLE: True
+    BATCH_SIZE_PER_IMAGE: 512
+  ROI_BOX_HEAD:
+    NUM_CLASSES: 81
+    POOLER_RESOLUTION: 7
+    POOLER_SAMPLING_RATIO: 2
+    POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
+    MLP_HEAD_DIM: 1024
+  ROI_MASK_HEAD:
+    POOLER_RESOLUTION: 14
+    POOLER_SAMPLING_RATIO: 2
+    POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
+    CONV_LAYERS: (256, 256, 256, 256)
+
