--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,6 @@ jobs:
         git_branch=${GITHUB_REF##*/}
         docker build --build-arg http_proxy=192.168.1.11:8118 --build-arg https_proxy=192.168.1.11:8118 --rm -t oneflow-build:${git_branch} -t oneflow-build:${git_hash} -f docker/build/Dockerfile .
         docker run --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl $PWD"
-    - name: Build Test Docker image
+    - name: Run Test
       run: |
         docker run --rm -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash $PWD/docker/test/test.sh $PWD
