fix whl install
Former-commit-id: c3c1dd70902df9fb03b8f712542e13c6e32ffbc2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
+        rm -rf *.whl
         rm -rf build/third_party
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --recursive
