Add the tvm.cmake of initial version
Former-commit-id: 554631070c80159a108aec0fa859c1494dbef5e8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ option(RELEASE_VERSION "" ON)
 option(PY3 "" ON)
 option(WITH_XLA "Option to build with XLA" OFF)
 option(WITH_TENSORRT "Option to build with TensorRT" OFF)
+option(WITH_TVM "Option to build with TVM" OFF)
 
 if(NOT RELEASE_VERSION)
   set(CUDNN_STATIC OFF CACHE BOOL "")
@@ -28,6 +29,9 @@ if (WITH_XLA)
 endif()
 if (WITH_TENSORRT)
   add_definitions(-DWITH_TENSORRT)
+endif()
+if (WITH_TVM)
+  add_definitions(-DWITH_TVM)
 endif()
 
 enable_testing()
