--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
       shell: bash
       run: |
         rm -rf *.whl
+        rm -rf oneflow_testexe
         rm -rf build/third_party
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --recursive
@@ -28,7 +29,7 @@ jobs:
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
         git_branch=${GITHUB_REF##*/}
         docker build --build-arg http_proxy=192.168.1.11:8118 --build-arg https_proxy=192.168.1.11:8118 --rm -t oneflow-build:${git_branch} -t oneflow-build:${git_hash} -f docker/build/Dockerfile .
-        docker run -u $(id -u ${USER}):$(id -g ${USER}) --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl $PWD"
+        docker run -u $(id -u ${USER}):$(id -g ${USER}) --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl $PWD && cp /workspace/build/bin/oneflow_testexe $PWD"
     - name: Run Test
       run: |
         docker run --shm-size=8g --rm -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash $PWD/docker/test/test.sh $PWD
