--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,10 @@ on:
       types: [synchronize, opened, reopened, ready_for_review]
       branches:
         - develop
+      paths:
+        oneflow/**
+        cmake/**
+        CMakeLists.txt
 
 jobs:
 
@@ -20,8 +24,8 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
-        rm -rf *.whl
-        rm -rf oneflow_testexe
+        rm -rf ci_tmp
+        mkdir ci_tmp
         rm -rf build/third_party
         bash tools/dev/ci_setup_submodule.sh
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
@@ -31,7 +35,7 @@ jobs:
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
         git_branch=${GITHUB_REF##*/}
         docker build --build-arg http_proxy=${ONEFLOW_CI_HTTP_PROXY} --build-arg https_proxy=${ONEFLOW_CI_HTTPS_PROXY} --rm -t oneflow-build:${git_branch} -t oneflow-build:${git_hash} -f docker/build/Dockerfile .
-        docker run -u $(id -u ${USER}):$(id -g ${USER}) --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl $PWD && cp /workspace/build/bin/oneflow_testexe $PWD"
+        docker run -u $(id -u ${USER}):$(id -g ${USER}) --rm -v $PWD:$PWD oneflow-build:${git_hash} bash -c "cp /workspace/dist/*.whl ci_tmp && cp /workspace/build/bin/oneflow_testexe ci_tmp"
     - name: Run Test
       run: |
-        docker run --shm-size=8g --rm -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash $PWD/docker/test/test.sh $PWD
+        docker run --shm-size=8g --rm -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash docker/test/test.sh ci_tmp
