add ignored files
Former-commit-id: 6f35d8a412a0edae1cbac237ac97e46e3b459d24

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,16 @@ on:
     push:
       branches:
         - develop
+      paths-ignore:
+        - '**.md'
+        - '.gitignore'
     pull_request:
       types: [synchronize, opened, reopened, ready_for_review]
       branches:
         - develop
-      paths:
-        oneflow/**
-        cmake/**
-        CMakeLists.txt
+      paths-ignore:
+        - '**.md'
+        - '.gitignore'
 
 jobs:
 
