add echo $HOSTNAME
Former-commit-id: eb2d0da3ae96b14687207343939c55f04b8e802d

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Checkout submodules
       shell: bash
       run: |
+        echo $HOSTNAME
         rm -rf ci_tmp
         mkdir ci_tmp
         rm -rf build/third_party
