--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,4 +43,4 @@ jobs:
         docker run -u $(id -u ${USER}):$(id -g ${USER}) --shm-size=8g --rm -v $PWD:$PWD oneflow-build:dev_ops bash -c "cp /workspace/dist/*.whl $PWD/ci_tmp/ && cp /workspace/build/bin/oneflow_testexe $PWD/ci_tmp/"
     - name: Run Test
       run: |
-        docker run -u $(id -u ${USER}):$(id -g ${USER}) --shm-size=8g --rm -w $PWD -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash ci/test.sh
+        docker run --shm-size=8g --rm -w $PWD -v $PWD:$PWD -v /dataset:/dataset -v /model_zoo:/model_zoo ufoym/deepo bash ci/test.sh
