--- a/docker/ci/base/Dockerfile
+++ b/docker/ci/base/Dockerfile
@@ -32,7 +32,7 @@ RUN mkdir -p /tmp/download && \
 ENV PATH="/cmake-extracted/cmake-install/bin:${PATH}"
 
 RUN mkdir /ninja-bin && cd /ninja-bin && \
-    wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip && \
+    curl --location https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip --output ninja-linux.zip && \
     unzip ninja-linux.zip
 
 ENV PATH="/ninja-bin:${PATH}"
